--- a/src/main/resources/templates/admin/admin_register.html
+++ b/src/main/resources/templates/admin/admin_register.html
@@ -373,9 +373,9 @@
         <label for="dept">부서</label>
         <select id="dept" name="dept">
           <option value="">선택하세요</option>
-          <option value="CUSTOMER_SERVICE">고객센터팀</option>
-          <option value="MEMBER_MANAGEMENT">회원관리팀</option>
-          <option value="CORPORATE">기업관리팀</option>
+          <option value="고객센터팀">고객센터팀</option>
+          <option value="회원관리팀">회원관리팀</option>
+          <option value="기업관리팀">기업관리팀</option>
         </select>
         <small class="input-help">부서를 선택해주세요.</small>
         <small class="error-msg" id="dept_error"></small>
@@ -392,10 +392,10 @@
         <label for="job">직급</label>
         <select id="job" name="job">
           <option value="">선택하세요</option>
-          <option value="EMPLOYEE">사원</option>
-          <option value="ASSISTANT_MANAGER">대리</option>
-          <option value="MANAGER">과장</option>
-          <option value="TEAM_LEADER">팀장</option>
+          <option value="사원">사원</option>
+          <option value="대리">대리</option>
+          <option value="과장">과장</option>
+          <option value="팀장">팀장</option>
         </select>
         <small class="input-help">직급을 선택해주세요.</small>
         <small class="error-msg" id="job_error"></small>
