--- a/src/main/resources/templates/admin/notice_list.html
+++ b/src/main/resources/templates/admin/notice_list.html
@@ -144,10 +144,11 @@ $(function() {
 </div>
 
 <!-- 하단 버튼 -->
-<div class="pagination-wrapper">
-<button id="btnDelete" class="delete-btn" type="button" style="background-color: red;">선택 삭제</button>
-<button id="btnWrite" class="delete-btn" type="button" style="background-color: green" th:onclick="|window.location.href='/admin/notice_write'|">공지사항 작성</button>
+<div class="admin-action-buttons">
+  <button id="btnApprove" class="delete-btn" type="button" style="background-color: green">작성</button>
+  <button id="btnWithdraw" class="delete-btn" type="button">탈퇴</button>
 </div>
+
 </section>
 </div>
 
