--- a/src/main/resources/templates/user/job_posting/company_info.html
+++ b/src/main/resources/templates/user/job_posting/company_info.html
@@ -156,7 +156,7 @@
 					</div>
                     <div class="review-header">
                         <h4 id="simple-list-item-7" style="font-size: 16px">기업 후기</h4>
-                        <a href="/user/job_posting/review" type="button" class="write-review-btn">자세히 보기</a>
+                     <a th:href="@{/user/job_posting/review(corpNo=${companyDTO.corpNo})}" type="button" class="write-review-btn">자세히 보기</a>
                     </div>
                 </div>
             </div>
