--- a/src/main/resources/templates/corp/applicant/applicant_resume.html
+++ b/src/main/resources/templates/corp/applicant/applicant_resume.html
@@ -63,7 +63,7 @@
 						<p>
 							<span th:text="${education.educationType}"></span> | <span th:text="${education.department}"></span>
 						</p>
-						<p class="sub-info">
+						<p class="sub-info" th:if="${education.grade != 0}">
 							<span th:text="${education.grade}"></span> / <span th:text="${education.standardGrade}"></span>
 						</p>
 					</div>
