--- a/src/main/resources/templates/user/mypage/scrap_posting.html
+++ b/src/main/resources/templates/user/mypage/scrap_posting.html
@@ -32,7 +32,8 @@
 									th:attr="data-posting-seq=${posting.jobPostingSeq}"
 									th:classappend="${posting.dday<0}?' expired-card'">
 									<div class="image-wrapper">
-										<img th:src="@{/images/img/{img}(img=${posting.corpImg})}" alt="기업 이미지">
+										<img th:src="@{/images/corpimg/{img}(img=${posting.corpImg})}" alt="기업 이미지">
+										<p th:text="${posting.corpImg}"></p>
 									</div>
 									<div class="dday-badge"
 										th:classappend="${posting.dday == 0} ? 'dday' : 
